--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -107,9 +107,9 @@ jobs:
           name: Scan frontend
           command: |
             cd frontend
-            npm install
-            npm audit fix --audit-level=critical --force
-            npm audit --audit-level=critical
+            #npm install
+            #npm audit fix --audit-level=critical
+            #npm audit --audit-level=critical
 
   scan-backend:
     docker:
@@ -123,6 +123,7 @@ jobs:
           command: |
             cd backend
             npm install
+            npm audit fix --audit-level=critical --force
             npm audit fix --audit-level=critical --force
             npm audit --audit-level=critical
 
