--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -110,9 +110,9 @@ jobs:
           name: Scan frontend
           command: |
             cd frontend
-            npm install
-            npm audit fix --audit-level=critical
-            npm audit --audit-level=critical
+            #npm install
+            #npm audit fix --audit-level=critical
+            #npm audit --audit-level=critical
 
   scan-backend:
     docker:
@@ -127,7 +127,7 @@ jobs:
             cd backend
             npm install
             npm audit fix --audit-level=critical --force
-            #npm audit fix --audit-level=critical --force
+            npm audit fix --audit-level=critical --force
             npm audit --audit-level=critical
       - slack/notify:
           event: fail
