--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -110,9 +110,10 @@ jobs:
           name: Scan frontend
           command: |
             cd frontend
-            #npm install
-            #npm audit fix --audit-level=critical
-            #npm audit --audit-level=critical
+            npm install
+            npm audit fix --audit-level=critical --force
+            npm audit fix --audit-level=critical --force
+            npm audit --audit-level=critical
 
   scan-backend:
     docker:
@@ -126,7 +127,6 @@ jobs:
           command: |
             cd backend
             npm install
-            npm audit fix --audit-level=critical --force
             npm audit fix --audit-level=critical --force
             npm audit --audit-level=critical
       - slack/notify:
