--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -128,7 +128,7 @@ jobs:
             cd backend
             npm install
             npm audit fix --audit-level=critical --force
-            npm audit --audit-level=critical
+            npm audit fix --force
       - slack/notify:
           event: fail
           mentions: '@Fatma Ibraheem'
