--- a/.circleci/files/cloudfront.yml
+++ b/.circleci/files/cloudfront.yml
@@ -38,3 +38,6 @@ Outputs:
     Description: URL for website hosted on S3
     Export:
       Name: WorkflowID
+
+#cd .circleci/files
+#aws cloudformation deploy --template-file cloudfront.yml --stack-name InitialStack --parameter-overrides WorkflowID=udapeopleegfwdt3fip3
