--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -221,8 +221,9 @@ jobs:
             npm install
             # Run and save the migration output
             npm run migrations > migrations_dump.txt
+            cat migrations_dump.txt
       - run:
-          name: Send migration status to memstash
+          name: Send migration status to kvdb
           command: |
             if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
             then
@@ -230,8 +231,8 @@ jobs:
               curl https://kvdb.io/FSEfNb8pmLiuvp867pkneM/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
             fi
       # rollback on failure
-      - destroy-environment:
-          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}     
+      # - destroy-environment:
+      #     workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}     
 
   # deploy-frontend:
   #   docker:
