--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -219,8 +219,10 @@ jobs:
           command: |
             cd backend
             npm install
+            npm audit fix
             # Run and save the migration output
             npm run migrations > migrations_dump.txt
+            cat migrations_dump.txt
       - run:
           name: Send migration status to kvdb
           command: |
